Made sure KT doesn't crash when Qt is not built with exception support.

BUG: 131142


svn path=/trunk/extragear/network/ktorrent/; revision=564759